--- a/ItalishPizza/res/values/strings.xml
+++ b/ItalishPizza/res/values/strings.xml
@@ -5,5 +5,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_add_product">AddProduct</string>
+    <string name="title_activity_add_user">AddUser</string>
+    
+    <string-array name="authority_arrays">
+        <item>Manager</item>
+        <item>Waiter</item>
+    </string-array>
 
 </resources>
